<resources>
    <string name="app_name">GestionFacturas</string>
    <string name="nombre">Nombre</string>
    <string name="datos_empresa">DATOS EMPRESA</string>
    <string name="nif">NIF</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="volver">VOLVER</string>
    <string name="pais">País</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="ciudad">Ciudad</string>
    <string name="direccion_empresa">DIRECCIÓN EMPRESA</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="credenciales_de_acceso">CREDENCIALES DE ACCESO</string>
    <string name="entrar">ENTRAR</string>
    <string name="inicio_de_sesion">INICIO DE SESIÓN</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="dni_nif">DNI / NIF</string>
    <string name="datos_cliente">DATOS CLIENTE</string>
    <string name="guardar_datos">GUARDAR\nDATOS</string>
    <string name="direccion_cliente">DIRECCIÓN CLIENTE</string>
    <string name="anadir_empleado">Añadir Empleado</string>
    <string name="desconectar">Desconectar</string>
    <string name="generar_factura">GENERAR\nFACTURA</string>
    <string name="anadir_nclliente">AÑADIR\nCLLIENTE</string>
    <string name="registrarse_como_empleado">Soy empleado</string>
    <string name="datos_empleado">DATOS EMPLEADO</string>
    <string name="aadir_empleado_titulo">AÑADIR EMPLEADO</string>
    <string name="anadir_nproducto">AÑADIR\nPRODUCTO</string>
    <string name="informes_de_nfacturacion">INFORMES DE\nFACTURACIÓN</string>
    <string name="productos">PRODUCTOS</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="informaci_n_de_clientes">INFORMACIÓN\nCLIENTES</string>
    <string name="introduzca_el_nombre_del_cliente">Introduzca el nombre del cliente</string>
    <string name="registrasre_como_empleado">Registrasre como empleado</string>
    <string name="buscar_cliente">Buscar cliente</string>
    <string name="cliente">CLIENTE</string>
    <string name="aceptar">Aceptar</string>
    <string name="seleccione_el_cliente">SELECCIONE EL CLIENTE</string>
    <string name="a_adir_material">AÑADIR MATERIAL</string>
    <string name="anadir_empleado_main">AÑADIR\nEMPLEADO</string>
    <string name="buscar_material">Buscar material</string>
    <string name="borrar">Borrar</string>
    <string name="crear_nfactura">CREAR\nFACTURA</string>
    <string name="cantidad">Cantidad</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="empleados">EMPLEADOS</string>
    <string name="clientes">CLIENTES</string>
    <string name="fecha">FECHA</string>
    <string name="buscar_empleado">Buscar empleado</string>
    <string name="facturaci_n_del_a_o">Facturación del año :</string>
    <string name="mostrar_informe_anual">MOSTRAR INFORME ANUAL</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="mostrar_informe_anual_clientes">MOSTRAR INFORME ANUAL CLIENTES</string>
    <string name="estadisticas_empleados">ESTADISTICAS EMPLEADOS</string>
    <string name="editar">editar</string>
    <string name="info_empresa">Info. Empresa</string>
    <string name="actualizar_ndatos">ACTUALIZAR \nDATOS</string>
    <string name="salir">Salir</string>
</resources>