<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroDireccionClienteActivity"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/direccion_cliente"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_direccionCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/et_cpCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/codigo_postal"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_direccionCliente" />

    <EditText
        android:id="@+id/et_ciudadCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/ciudad"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cpCliente" />

    <EditText
        android:id="@+id/et_paisCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/pais"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ciudadCliente" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_volverRegistroDireccionCliente"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/transparent"
        android:onClick="volverRegistroDireccionClientes"
        android:text="@string/volver"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_guardarDatosCliente"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_guardarDatosCliente"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:onClick="guardarDatosCliente"
        android:text="@string/guardar_datos"
        app:cornerRadius="10dp"
        app:icon="@drawable/iconoguardar"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_paisCliente"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>