<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroClienteActivity"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/datos_cliente"
        android:textSize="24sp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nombreClienteFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_nifCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dni_nif"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombreClienteFactura" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_volverRegistroCliente"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:onClick="volverRegistroCliente"
        android:text="@string/volver"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_registroCliente"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_registroCliente"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:onClick="registroDireccionCliente"
        android:text="@string/siguiente"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_correoCliente"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_telefonoCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nifCliente" />

    <EditText
        android:id="@+id/et_correoCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_telefonoCliente" />

</androidx.constraintlayout.widget.ConstraintLayout>