<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroDireccionActivity"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/direccion_empresa"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:endIconContentDescription="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_direcionEmpresa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:inputType="textCapSentences"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="369dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:endIconContentDescription="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ciudadEmpresa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"
            android:inputType="textCapSentences"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="369dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:endIconContentDescription="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cpEmpresa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/codigo_postal"
            android:inputType="number"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="369dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:endIconContentDescription="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_paisEmpresa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/pais"
            android:inputType="textCapSentences"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="369dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_volverRegistroDireccionEmpresa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/black"
        app:strokeColor="@color/grey"
        app:strokeWidth="2dp"
        android:onClick="volverRegistroDatos"
        android:text="@string/volver"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_registroDireccionEmpresa"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_registroDireccionEmpresa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/transparent"
        android:onClick="registroEmail"
        android:text="@string/siguiente"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:strokeColor="@color/grey"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>