<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarDireccionEmpresaActivity"
    android:background="@drawable/fondo">
    <TextView
        android:id="@+id/tv_tituloActualizacionDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/direccion_empresa"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:endIconContentDescription="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tituloActualizacionDireccion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_actualizarDirecionEmpresa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:inputType="textCapSentences"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="369dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:endIconContentDescription="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_direccion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_actualizarCiudadEmpresa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"
            android:inputType="textCapSentences"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="369dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:endIconContentDescription="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_ciudad">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_actualizarCpEmpresa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/codigo_postal"
            android:inputType="number"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="369dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:endIconContentDescription="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_cp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_actualizarPaisEmpresa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/pais"
            android:inputType="textCapSentences"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="369dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_volveractualizarDireccionEmpresa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/transparent"
        android:onClick="volverActualizarDatosEmpresa"
        android:text="@string/volver"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_actualizarDireccionEmpresa"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_actualizarDireccionEmpresa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/transparent"
        android:onClick="actualizarDatosEmpresa"
        android:text="@string/actualizar_ndatos"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_pais"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>